Correct : Small z-index bug on Contact Page

--- a/client/src/components/Contact/Contact.scss
+++ b/client/src/components/Contact/Contact.scss
@@ -1,5 +1,8 @@
 .contact {
+  position:relative;
+  z-index: 10;
   padding-bottom: 50px;
+
   &__intro {
   margin: 0 auto;
   width: 60%;
